@@ -1,0 +1,63 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3DataStructure>
+	<meta type="array">
+		<langDisable type="integer">1</langDisable>
+	</meta>
+	<sheets>
+		<sDEF>
+			<ROOT>
+				<TCEforms>
+					<sheetTitle>LLL:EXT:kb_kickstarter/llxml/locallang_db_fields.xml:xml.sheet.basic</sheetTitle>
+				</TCEforms>
+				<type>array</type>
+				<el>
+					<default type="array">
+						<TCEforms>
+							<label>LLL:EXT:kb_kickstarter/fieldTypes/radiobuttons/locallang.xml:field.default</label>
+							<config>
+								<type>input</type>
+								<size>10</size>
+							</config>
+						</TCEforms>
+					</default>
+					<selectElements type="array">
+						<type>array</type>
+						<section>1</section>
+						<el type="array">
+							<selectElement type="array">
+								<type>array</type>
+								<label>LLL:EXT:kb_kickstarter/fieldTypes/radiobuttons/locallang.xml:field.radioElement</label>
+								<tx_templavoila type="array">
+								<title>Radiobutton item</title>
+								</tx_templavoila>
+								<el type="array">
+									<label type="array">
+										<TCEforms>
+											<label>LLL:EXT:kb_kickstarter/fieldTypes/radiobuttons/locallang.xml:field.radioElement.label</label>
+											<config>
+												<type>input</type>
+												<size>30</size>
+												<max>250</max>
+											</config>
+										</TCEforms>
+									</label>
+									<value type="array">
+										<TCEforms>
+											<label>LLL:EXT:kb_kickstarter/fieldTypes/radiobuttons/locallang.xml:field.radioElement.value</label>
+											<config>
+												<type>input</type>
+												<size>30</size>
+												<max>250</max>
+											</config>
+										</TCEforms>
+									</value>
+								</el>
+							</selectElement>
+						</el>
+					</selectElements>
+				</el>
+			</ROOT>
+		</sDEF>
+		<sheet_language>EXT:kb_kickstarter/fieldTypes/_basics/sheet_language.xml</sheet_language>
+	</sheets>
+</T3DataStructure>
