@@ -1,0 +1,4 @@
+{strip}
+		`{$property.full_alias}` text,
+{/strip}
+
