@@ -1,6 +1,0 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
-<kb_kickstarter>
-	<propertyName>LLL:EXT:kb_kickstarter/fieldTypes/todo_radiobuttons/locallang.xml:property_name</propertyName>
-	<propertyValue>radiobuttons</propertyValue>
-	<propertyIcon>EXT:kb_kickstarter/fieldTypes/radiobutton/prop_icon.png</propertyIcon>
-</kb_kickstarter>
