@@ -1,25 +1,0 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
-<T3locallang>
-	<meta type="array">
-		<description>Property labels for kb_kickstart property "integer"</description>
-		<type>database</type>
-		<csh_table></csh_table>
-		<fileId>EXT:kb_kickstarter/fieldTypes/integer/locallang.xml</fileId>
-		<labelContext type="array">
-			<label index="property_name"></label>
-			<label index="field.prop_min"></label>
-			<label index="field.prop_max"></label>
-			<label index="field.prop_default"></label>
-		</labelContext>
-		<ext_filename_template>EXT:csh_###LANGKEY###/kb_kickstarter/fieldTypes/string/###LANGKEY###.locallang.xml</ext_filename_template>
-		<keep_original_text type="integer">1</keep_original_text>
-	</meta>
-	<data type="array">
-		<languageKey index="default" type="array">
-			<label index="property_name">Radiobuttons</label>
-			<label index="field.prop_min">Minimal value</label>
-			<label index="field.prop_max">Maximal value</label>
-			<label index="field.prop_default">Default value</label>
-		</languageKey>
-	</data>
-</T3locallang>
